--- a/paper/references.bib
+++ b/paper/references.bib
@@ -46,3 +46,11 @@
     url = {https://CRAN.R-project.org/package=arrow},
   }
   
+    @Manual{citestyler,
+    title = {styler: Non-Invasive Pretty Printing of R Code},
+    author = {Kirill Müller and Lorenz Walthert},
+    year = {2024},
+    note = {R package version 1.10.3},
+    url = {https://CRAN.R-project.org/package=styler},
+  }
+  
